[project]
name = "telecherry"
version = "0.0.1"
description = "Modern MTProto library for Python with strict type-checking"
authors = [
    {name = "CherryDevStudio"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]